--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -12,24 +12,24 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-tracing = "0.1"
+tracing = { version = "0.1", default-features = false, features = ["std"] }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-iroh = "0.91"
-ed25519-dalek = { version = "2.2", features = ["hazmat"] }
-tokio = "1"
+iroh = { version = "0.91", default-features = false }
+ed25519-dalek = { version = "2.2", features = ["hazmat"], default-features = false}
+tokio = { version = "1", default-features = false, features = ["rt-multi-thread","macros","time"] }
 anyhow = "1"
-futures = "0.3"
+futures = { version = "0.3", default-features = false, features = ["std"] }
 once_cell = "1"
 bs58 = "0.5"
 
 [lib]
 name = "irohffi"
 path = "src/lib.rs"
-crate-type = ["staticlib", "cdylib"]
+crate-type = ["staticlib"]
 
 [profile.release]
-opt-level = "z"
-lto = true
+opt-level = "s"
+lto = "fat"
 codegen-units = 1
 panic = "abort"
 strip = "symbols"
