--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,15 +1,13 @@
 [package]
 name = "irohffi"
-description = "auto bootstrap for iroh-gossip topics"
-license = "MIT"
+description = "libp2p iroh transport integration"
 authors = ["Zacharias Boehler <rustonbsd@mailfence.com>"]
-repository = "https://github.com/rustonbsd/distributed-topic-tracker"
-homepage = "https://rustonbsd.github.io/"
 readme = "../README.md"
-keywords = ["networking"]
-categories = ["network-programming"]
 version = "0.1.0"
 edition = "2024"
+
+[build-dependencies]
+cbindgen = "0.29"
 
 [dependencies]
 tracing = { version = "0.1", default-features = false, features = ["std"] }
@@ -21,11 +19,12 @@ anyhow = "1"
 futures = { version = "0.3", default-features = false, features = ["std"] }
 once_cell = "1"
 bs58 = "0.5"
+libc = "0.2.2"
 
 [lib]
 name = "irohffi"
 path = "src/lib.rs"
-crate-type = ["staticlib"]
+crate-type = ["cdylib"]
 
 [profile.release]
 opt-level = "s"
@@ -35,8 +34,3 @@ panic = "abort"
 strip = "symbols"
 debug = false
 incremental = false
-
-
-[[example]]
-name = "libp2p_peerid_to_iroh_nodeid"
-path = "examples/libp2p_peerid_to_iroh_nodeid.rs"
