--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -20,6 +20,7 @@ futures = { version = "0.3", default-features = false, features = ["std"] }
 once_cell = "1"
 bs58 = "0.5"
 libc = "0.2"
+tokio-util = "0.7"
 
 [lib]
 name = "irohffi"
